--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "modern-normalize": "^3.0.1",
     "prettier": "^3.6.2",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.5.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
